--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 								id="end-year"
                             />
                         </div>
-                        <button id="search-btn" type="search" class="btn btn-primary">Search</button>
+                        <button id="search-btn"  class="btn btn-primary">Search</button>
                         <button id="clear-btn" type="clear" class="btn btn-primary">Clear Results</button>
 					</form>
 				</div>
@@ -63,13 +63,10 @@
         
         <nav class="navbar navbar-light bg-light">
             <span class="navbar-brand mb-0 h1">Top Articles</span>
-        </nav>
-
-		<script
-			src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-			crossorigin="anonymous"
-		></script>
+		</nav>
+		<div id="top-articles"></div>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="search.js"></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
 			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
