--- a/index.html
+++ b/index.html
@@ -13,53 +13,48 @@
 		/>
 	</head>
 	<body>
-		<div class="jumbotron jumbotron-fluid">
-			<div class="container">
-				<div>
-					<h1 class="display-4">New York Times Search</h1>
-				</div>
-				<div>
-					<div class="parameter-section">
-						<form>
-							<nav class="navbar navbar-dark bg-dark">
-								<span class="navbar-brand mb-0 h1">Search Parameters</span>
-							</nav>
-							<div class="form-group">
-								<label>Search Term: </label>
-								<input type="search" class="form-control" id="search-term" />
-							</div>
-							<div class="form-group">
-								<label> Number of Records to Retrieve:</label>
-								<select class="form-control" id="num-records">
-									<option>1</option>
-									<option>5</option>
-									<option>10</option>
-								</select>
-							</div>
-							<div class="form-group">
-								<label>Start Year(Optional):</label>
-								<input type="search" class="form-control" id="start-year" />
-							</div>
-							<div class="form-group">
-								<label>End Year(Optional): </label>
-								<input type="search" class="form-control" id="end-year" />
-							</div>
-							<button id="search-btn" type="search" class="btn btn-primary">
-								Search
-							</button>
-							<button id="clear-btn" type="clear" class="btn btn-primary">
-								Clear Results
-							</button>
-						</form>
+		<div class="container">
+			<div class="jumbotron text-white bg-dark text-center">
+				<h1 class="display-4">New York Times Search</h1>
+			</div>
+			<div class="card" id="parameter-section">
+				<h5 class="card-header text-white bg-dark">Search Parameters</h5>
+				<form>
+					<div class="form-group">
+						<label>Search Term: </label>
+						<input type="search" class="form-control" id="search-term" />
 					</div>
+					<div class="form-group">
+						<label> Number of Records to Retrieve:</label>
+						<select class="form-control" id="num-records">
+							<option>1</option>
+							<option>5</option>
+							<option>10</option>
+						</select>
+					</div>
+					<div class="form-group">
+						<label>Start Year(Optional):</label>
+						<input type="search" class="form-control" id="start-year" />
+					</div>
+					<div class="form-group">
+						<label>End Year(Optional): </label>
+						<input type="search" class="form-control" id="end-year" />
+					</div>
+					<button id="search-btn" type="search" class="btn btn-dark btn-lg">
+						Search
+					</button>
+					<button id="clear-btn" type="clear" class="btn btn-dark btn-lg">
+						Clear Results
+					</button>
+				</form>
+			</div>
+
+			<div id="articles-section" class="card">
+				<h5 class="card-header text-white bg-dark">Top Articles</h5>
+				<div class="card-body">
+					<div id="search-results"></div>
 				</div>
 			</div>
-		</div>
-		<div class="jumbotron jumbotron-fluid">
-			<nav class="navbar navbar-dark bg-dark">
-				<span class="navbar-brand mb-0 h1">Top Articles</span>
-			</nav>
-			<p>search result</p>
 		</div>
 
 		<script
