--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="jumbotron text-white bg-dark text-center">
-				<h1 class="display-4">New York Times Search</h1>
+			<div class="jumbotron text-white bg-dark text-center ">
+				<h1 class="display-4 font-weight-bold">New York Times Search</h1>
 			</div>
 			<div class="card" id="parameter-section">
 				<h5 class="card-header text-white bg-dark">Search Parameters</h5>
