Add icons to headers

--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 			integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
 			crossorigin="anonymous"
 		/>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
 	</head>
 	<body>
 		<div class="container">
 			<div class="jumbotron text-white bg-dark text-center ">
-				<h1 class="display-4 font-weight-bold">New York Times Search</h1>
+				<h1 class="display-4 font-weight-bold"><i class="far fa-newspaper"></i>New York Times Search</h1>
 			</div>
 			<div class="card" id="parameter-section">
-				<h5 class="card-header text-white bg-dark">Search Parameters</h5>
+				<h5 class="card-header text-white bg-dark"><i class="far fa-list-alt"></i>Search Parameters</h5>
 				<form>
 					<div class="form-group">
 						<label>Search Term: </label>
@@ -41,16 +42,16 @@
 						<input type="search" class="form-control" id="end-year" />
 					</div>
 					<button id="search-btn" type="search" class="btn btn-dark btn-lg">
-						Search
+					<i class="fas fa-search"></i>Search
 					</button>
 					<button id="clear-btn" type="clear" class="btn btn-dark btn-lg">
-						Clear Results
+					<i class="far fa-trash-alt"></i>Clear Results
 					</button>
 				</form>
 			</div>
 
 			<div id="articles-section" class="card">
-				<h5 class="card-header text-white bg-dark">Top Articles</h5>
+				<h5 class="card-header text-white bg-dark"><i class="fas fa-border-all"></i>Top Articles</h5>
 				<div class="card-body">
 					<div id="search-results"></div>
 				</div>
@@ -72,5 +73,6 @@
 			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
 			crossorigin="anonymous"
 		></script>
+		
 	</body>
 </html>
